samples/_failures_safe/1761795959_cdb768_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9f70477.c: In function ‘main’:
./samples/SAFE/__tmp_f9f70477.c:136:61: error: missing terminating " character
  136 |     add_log_entry(&analyzer, "2024-01-15 10:30:00", "INFO", "
      |                                                             ^
./samples/SAFE/__tmp_f9f70477.c:136:5: error: expected expression at end of input
  136 |     add_log_entry(&analyzer, "2024-01-15 10:30:00", "INFO", "
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_f9f70477.c:136:5: error: expected declaration or statement at end of input
